--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Chris Frashure",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
+    "request": "^2.88.2"
   }
 }
